# cmake_cpp_experiment

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  _clang-format  _clang-tidy  vcpkg.json
Projects/ALib/: CMakeLists.txt
Projects/ALib/ALib/: ALib.cpp  ALib.h
Projects/App/: CMakeLists.txt
Projects/App/App/: GoogleTest.h  main.cpp
